--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,7 +27,9 @@
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.10.0",
     "react-native-paper": "^5.12.3",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^15.1.0",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
