--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -1,6 +1,12 @@
 {
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "plugins": ["prefer-arrow", "@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": [
+    "prefer-arrow",
+    "@typescript-eslint"
+  ],
   "rules": {
     "quotes": [
       "error",
@@ -9,7 +15,10 @@
         "avoidEscape": true
       }
     ],
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "react-hooks/exhaustive-deps": "off",
     "prefer-arrow/prefer-arrow-functions": "error",
     "camelcase": "error",
@@ -17,12 +26,19 @@
       "error",
       {
         "selector": "variable",
-        "types": ["function"],
-        "format": ["camelCase", "PascalCase"]
+        "types": [
+          "function"
+        ],
+        "format": [
+          "camelCase",
+          "PascalCase"
+        ]
       },
       {
         "selector": "variable",
-        "format": ["camelCase"]
+        "format": [
+          "camelCase"
+        ]
       }
     ]
   },
