--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "dev.hunterwilson.appalcart",
@@ -33,11 +31,7 @@
       },
       "package": "dev.hunterwilson.appalcart"
     },
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "web": {
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
