--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "format": "prettier --write . && eslint . --ext .js,.ts --fix"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
