--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
@@ -26,6 +27,7 @@
     "react-native": "0.73.4",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.10.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6",
